--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "antd": "^5.23.0",
+    "axios": "^1.7.9",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.3.24",
     "install": "^0.13.0",
